apps/production/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
